--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,10 @@
+html {
+  height: 100%;
+}
+
 body {
+  color: #e6e5e8;
+  min-height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +16,20 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.bg-main-color {
+  background-color: #8a85ff;
+}
+
+.bg-secondary-color {
+  background-color: #282c34;
+}
+
+.text-main-color {
+  color: #e6e5e8;
+}
+
+.text-secondary-color {
+  color: #8a85ff;
 }
